--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,4 @@ jobs:
           heroku_api_key: ${{ secrets.HEROKU_TOKEN }}
           heroku_app_name: "currency-checker-web"
           heroku_email: "luka.zugaj7@gmail.com"
+          procfile: 'web: npm start'
