--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,23 @@ jobs:
           node-version: 17.x
       - run: npm install
       - run: npm run build --if-present
+      - name: Heroku login credentials
+      - run: |
+          cat > ~/.netrc <<EOF
+            machine api.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+            machine git.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+          EOF
+      - env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          heroku_api_key: ${{ secrets.HEROKU_TOKEN }}
-          heroku_app_name: "currency-checker-web"
-          heroku_email: "luka.zugaj7@gmail.com"
+          HEROKU_API_KEY: ${{ secrets.HEROKU_TOKEN }}
+          HEROKU_APP_NAME: "currency-checker-web"
+          HEROKU_EMAIL: "luka.zugaj7@gmail.com"
           procfile: 'web: npm start'
