--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,24 +4,13 @@ on:
     branches:
       - develop
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Development Code
-        uses: actions/checkout@v2
-
-      - name: Use Node.js 17.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 17.x
-      - run: npm install
-      - run: npm run build --if-present
-
-      - name: Deploy to Heroku
-      - run : actions/checkout@v2
-      - run : akhileshns/heroku-deploy@v3.12.12
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
-          branch: develop
+          remote_branch: "develop"
