--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.4",
     "react": "^17.0.2",
@@ -47,7 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.3",
     "postcss": "^8.4.11",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.23"
   }
 }
